Add metas. httpS instead of http.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>EU VAT Rates Web Service</title>
 
+    <meta name="description" content="Simple Web Service to load the VAT Rates for all countries in the European Union from official sources.">
+    <meta name="author" content="Mark Hamstra">
+
     <style type="text/css">
         html, body {
             font-size: 16px;
@@ -73,7 +76,7 @@
 
     <h2>How it works</h2>
 
-    <p>Simply load <code>http://euvatrates.com/rates.json</code> (<a href="rates.json">Click!</a>) and use the data to apply the proper VAT rates in your cart or checkout system. </p>
+    <p>Simply load <code>https://euvatrates.com/rates.json</code> (<a href="rates.json">Click!</a>) and use the data to apply the proper VAT rates in your cart or checkout system. </p>
 
     <p>Considering these VAT rates rarely change, <b>cache the data on your system</b>. If you repeatedly hit the server and steal up the bandwidth, you risk getting blocked from accessing this free service. </p>
 
