Suggest people sign up to the newsletter

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <p>This static web service provides a simple to consume JSON document, containing a list of VAT rates per country in the European Union. It can be used to automatically grab the right VAT right to comply with the 2015 EU VAT Changes. As it's a free service, use is at your own risk. </p>
 
-    <p><a href="https://github.com/modmore/euvatrates.com" target="_blank">You can contribute to this service on Github!</a></p>
+    <p><a href="https://github.com/modmore/euvatrates.com" target="_blank">You can contribute to this service on Github!</a> Please <a href="#subscribe">subscribe to the newsletter</a> to receive important information about the service (such as VAT or format changes). </p>
 
     <h2>How it works</h2>
 
@@ -107,7 +107,8 @@
 
     <section class="divide">
         <section>
-            <h2>Subscribe to Updates</h2>
+            <h2 id="subscribe">Subscribe to Updates</h2>
+            <p>Receive an email with important news, such as VAT rate changes and changes to the format or available features. </p>
             <!-- Begin MailChimp Signup Form -->
             <div id="mc_embed_signup">
             <form action="//markhamstra.us2.list-manage.com/subscribe/post?u=f70125e94ef1181a22558acd5&amp;id=afa32423f6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
