--- a/index.html
+++ b/index.html
@@ -160,6 +160,12 @@
         </aside>
     </section>
 
+    <h2>Recent Changes</h2>
+    <ul>
+        <li>[2014-12-30] Remove "The" from "The Netherlands" again (#1)</li>
+        <li>[2014-11-07] Fix typo in Finland, add "The" to "The Netherlands"</li>
+    </ul>
+
 </section>
 
 </body>
