Add MIT license

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <section class="main">
     <h1>Welcome to the EU VAT Rates Web Service</h1>
 
-    <p>This static web service provides a simple to consume JSON document, containing a list of VAT rates per country in the European Union. It can be used to automatically grab the right VAT right to comply with the 2015 EU VAT Changes. As it's a free service, use is at your own risk. </p>
+    <p>This static web service provides a simple to consume JSON document, containing a list of VAT rates per country in the European Union. It can be used to automatically grab the right VAT right to comply with the 2015 EU VAT Changes. As it's a free service, use is at your own risk. This project is licenses under the MIT License.</p>
 
     <p><a href="https://github.com/modmore/euvatrates.com" target="_blank">You can contribute to this service on Github!</a> Please <a href="#subscribe">subscribe to the newsletter</a> to receive important information about the service (such as VAT or format changes). </p>
 
