Update last updated date and add source to the list

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 
             <ul>
                 <li><a href="http://ec.europa.eu/taxation_customs/resources/documents/taxation/vat/how_vat_works/rates/vat_rates_en.pdf" target="_blank">VAT Rates Applied in the Member States of the European Union</a> (PDF, retrieved October 20th, 2014)</li>
+                <li><a href="http://www.vatlive.com/vat-rates/european-vat-rates/eu-vat-rates/">Avalara VATlive</a></li>
             </ul>
 
             <h2>Make a Donation</h2>
@@ -169,7 +170,8 @@
 
     <h2>Recent Changes</h2>
     <ul>
-        <li>[2015-09-21] Updated VAT rate for Greece [#4]</li>
+        <li>[2016-01-01] Updated Romanian VAT rate, and re-ordered countries in the list to be alphabetical-ish (<a href="https://github.com/modmore/euvatrates.com/pull/5">#5</a>)</li>
+        <li>[2015-09-21] Updated VAT rate for Greece (<a href="https://github.com/modmore/euvatrates.com/pull/4">#4</a>)</li>
         <li>[2015-01-02] Update Luxembourg VAT rates (<a href="https://github.com/modmore/euvatrates.com/pull/3">#3</a>, <a href="http://www.vatlive.com/european-news/luxembourg-vat-rise-17-2015/">source</a>)</li>
         <li>[2014-12-30] <code>last_updated</code> timestamp is now formatted according to ISO 8601</li>
         <li>[2014-12-30] Include <code>GB</code> and <code>GR</code> rates elements as duplicates of the <code>UK</code> and <code>EL</code> elements to deal with how differences in how the EU and ISO hav determined country codes. The duplicates (the ISO representation: GB and GR) contain a new <code>iso_duplicate_of</code> element referring to the EU-style country code. The originals (the EU representation: UK and EL) contain a new <code>iso_duplicate</code> element, referring to the ISO-style country code.</li>
